--- a/index.css
+++ b/index.css
@@ -340,6 +340,25 @@ body, html {
 }
 
 
+
+
+/* Parallax2 Section */
+.parallax2-section {
+    position: relative;
+    height: 100vh; /* Full viewport height */
+    overflow: hidden;
+}
+
+.parallax2 {
+    background-image: url('2.png'); /* Replace with your image */
+    height: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position:top;
+    filter: brightness(100%); /* Darken the background image for better text readability */
+}
+
+
 .cta-section {
     display: flex;
     align-items: center;
@@ -347,7 +366,7 @@ body, html {
     padding: 40px 20px;
     background-color: #afc769;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: auto; /* Adjust height to fit content */
+    height: 300px; /* Adjust height to fit content */
 }
 
 .cta-section .button-container {
@@ -376,18 +395,22 @@ body, html {
 }
 
 .cta-section .content {
-    max-width: 70%;
+    max-width: 50%;
     text-align: right;
     margin-right: 30px;
+    display: flex;
+    flex-direction: column; /* Stack heading and text vertically */
+    align-items: flex-end; /* Align text to the right */
 }
 
 .cta-section .content h2 {
-    font-size: 28px;
+    font-size: 26px;
     font-weight: bold;
     color: #000000;
-    margin-bottom: 10px;
+    
     text-transform: uppercase;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 10px; /* Space between heading and paragraph */
 }
 
 .cta-section .content p {
@@ -396,25 +419,6 @@ body, html {
     color: #000000;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
-/* Parallax2 Section */
-.parallax2-section {
-    position: relative;
-    height: 100vh; /* Full viewport height */
-    overflow: hidden;
-}
-
-.parallax2 {
-    background-image: url('2.png'); /* Replace with your image */
-    height: 100%;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position:top;
-    filter: brightness(100%); /* Darken the background image for better text readability */
-}
-
-
-
 
 
 .cta-section .cta-button:hover {/* Responsive Design */
